unpackaged/main/default/objects/Supply_Request__c/Supply_Request__c.object-meta.xml
<CustomObject>
    <label>Supply Request</label>
    <nameField>
        <displayFormat>BR-{000000}</displayFormat>
        <label>Bag Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>