unpackaged/main/default/objects/Supply_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Is this for a specific Account?</description>
    <inlineHelpText>Is this for a specific Account?</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bag_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>