unpackaged/main/default/objects/Supply_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location Picking Up</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pompano</fullName>
            </value>
            <value>
                <fullName>Orlando</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Killingworth</fullName>
            </value>
            <value>
                <fullName>Coastal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>