unpackaged/main/default/objects/Supply_Request__c/fields/Supply_Item__c.field-meta.xml
<CustomField>
    <fullName>Supply_Item__c</fullName>
    <label>Supply Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Bags</fullName>
            </value>
            <value>
                <fullName>Rolled Bags</fullName>
            </value>
            <value>
                <fullName>Large - Cardboard Display</fullName>
            </value>
            <value>
                <fullName>Small - Cardboard Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>